fixed overlapping css class names

--- a/css/style.css
+++ b/css/style.css
@@ -345,7 +345,7 @@ nav ul li a:hover {
     }
   }
     
-.stats-summary,
+.log-stats-summary,
 .week-calendar {
     background-color: #fff;
     border-radius: 10px;
@@ -361,7 +361,7 @@ nav ul li a:hover {
     height: 100%;
 }    
 
-.stats-summary p {
+.log-stats-summary p {
     margin: 0;
 }
 
